cabal-version:       2.0
name:                keygen
version:             0.1.0.0
synopsis:            Generate keys using user-supplied entropy
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable keygen
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base                 >= 4.11 && < 4.13,
    ansi-wl-pprint       >= 0.6.9 && < 0.7,
    base64-bytestring,
    base16-bytestring,
    bytestring           >= 0.10.8 && < 0.11,
    containers           >= 0.6.0 && < 0.7,
    cryptonite           >= 0.26 && < 0.27,
    memory               >= 0.14.18 && < 0.15,
    optparse-applicative >= 0.14.3 && < 0.15,
    transformers         >= 0.5.6 && < 0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
