cabal-version:       2.0
name:                keygen
version:             0.1.0.0
synopsis:            Generate keys using user-supplied entropy
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable keygen
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base                 >= 4.8 && < 5,
    ansi-wl-pprint       >= 0.6.9 && < 0.7,
    base64-bytestring    >= 1.0 && < 1.1,
    base16-bytestring    >= 0.1 && < 0.2,
    bytestring           >= 0.10 && < 0.11,
    containers           >= 0.5 && < 0.7,
    cryptonite           >= 0.25 && < 0.27,
    memory               >= 0.14.16 && < 0.15,
    optparse-applicative >= 0.14.3 && < 0.16,
    transformers         >= 0.4 && < 0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
